--- a/assets/css/input/styles.css
+++ b/assets/css/input/styles.css
@@ -8950,6 +8950,16 @@ textarea.form-control-lg {
   transition: transform 0.3s ease-in-out;
 }
 
+.linkTitle {
+  text-decoration: none;
+  color: #3232c7;
+  background-color: transparent;
+}
+.linkTitle:hover {
+  cursor: pointer;
+  text-decoration: underline;
+}
+
 #shoppingCart.hover-zoom:hover {
   transition: all 100ms ease-in;
   transform: scale(1.2);
